# russtress_bot

./: .dockerignore  .gitignore  Dockerfile  TODO.md  docker-compose.yml  pyproject.toml  start.bat
bot/: __main__.py  callbacks.py  config.py  language.py  stress_data.py  utils.py
data/: raw.txt
